--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PlanIt"
         tools:targetApi="31">
+        <activity android:name=".CalendarActivity" />
+        <activity android:name=".AddTaskActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
